New Ebony wizard armor set, replaces regular ebony armor in Crimson Wizard Recipe
New Blessed Priest armor set, 20% holy spell power, 125 max mana + full set bonus: During the day,  cast speed, cooldown reduction and max blood/eldritch spell resistance
Blessed Amulet now removes Iron's harmful effects
Counselor Tunic & Leggings now have +15% eldritch power and +50 max mana
New Spell - Eldritch Slash, iron's flaming strike but instead of setting your opponent on fire, it does more damage & damage is boosted by the Oath weapon
Oath

New config for invis ability to set how long the invis effect lasts when given


Reworks:
Changed Crimson Cloth recipe to 3x fleshy cloth, 2 magic cloth, 1 divine blood vial, 1 blood rune & 2 ebony raw
Crimson Wizard is now crafted using ebony wizard armor instead of regular ebony

STAFF REWORKS:
All scepters/staffs are now an iron's Spells StaffItem, being able to cast any spell on right click
Scepter of Compensation - Magic Arrow turned into a spell, Passive Ability: Attacking with spells gives you jump boost
Pyroclastic Staff - Triple fireball turned into a spell, Passive Ability: Attacking with Fire spells gives you "flame grant me strength" & sets your enemies on fire
Corroding Flame - Acid Fireball is now a spell, Passive ability: Attacking with spells gives your enemies poison effect


Balance Changes:
BUFFS:
Bloodymancer armor now has +100 max mana instead of 0
Bloodymancer Tunic can now be imbued with spells
Bloody cult now has 5% blood power and 50 max mana instead of 0
Gravedigger weapon now has +10% summon damage and 5% cooldown reduction
Oath Weapon is now imbued with Eldritch Slash
Corroded flame scepter now gives +10% nature instead of 5% fire and 5% nature

NERFS:
Kamath armor now has only 5% instead of 15% eldritch power

Fixes:
Crimson Wizard armor can now be repaired with crimson cloth instead of crimson ingot
